[gd_scene load_steps=2 format=3 uid="uid://cjur1hus4nxm5"]

[ext_resource type="Script" path="res://scene/Ennemy/Anthea/anthea.gd" id="1_6k8di"]

[node name="Anthea" type="Node2D"]
script = ExtResource("1_6k8di")

[node name="HidingTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="RunTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[connection signal="timeout" from="HidingTimer" to="." method="_on_hiding_timer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
